--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.25.1'
+        go-version-file: 'go.mod'
+        cache: true
 
     - name: Install Ginkgo CLI
       run: go install github.com/onsi/ginkgo/v2/ginkgo@latest
@@ -56,7 +57,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.25.1'
+        go-version-file: 'go.mod'
+        cache: true
 
     - name: Build binary
       run: |
