--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,11 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.25.1'
+        go-version-file: 'go.mod'
+        cache: true
 
-    - name: Run tests
-      run: |
-        go test -v ./pkg/...
-        go test -v ./test/...
+    - name: Run unit tests
+      run: go test -v ./pkg/...
 
     - name: Build binaries
       env:
