feat: make disk space requirement configurable via environment variable
Add PIVNET_MIN_FREE_SPACE_GB environment variable to allow overriding
the minimum free disk space requirement for tile downloads.

Changes:
- Add PIVNET_MIN_FREE_SPACE_GB env var parsing in main.go
- Default to 5GB (reduced from hardcoded 20GB)
- Set to 2GB in CI workflow to prevent disk space failures
- Update CI workflow to test --version flag now that it exists

This fixes the "fails with meaningful error for invalid Pivnet token"
acceptance test failure in CI, which was failing on disk space check
before it could reach the authentication step.

The lower default (5GB) is more reasonable for most use cases, and
the environment variable allows users to adjust based on their needs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
     - name: Run acceptance tests (Ginkgo)
       env:
         PIVNET_TOKEN: ${{ secrets.PIVNET_TOKEN }}
+        PIVNET_MIN_FREE_SPACE_GB: "2"  # Lower requirement for CI tests (default: 5GB)
         # ENABLE_DOWNLOAD_TESTS: "1"  # Uncomment to run all 12 tests (slower, downloads tiles)
       run: |
         go build -v ./cmd/tile-diff
@@ -63,7 +64,7 @@ jobs:
     - name: Build binary
       run: |
         go build -v -o bin/tile-diff ./cmd/tile-diff
-        ./bin/tile-diff --version || echo "Version command not implemented yet"
+        ./bin/tile-diff --version
 
     - name: Test binary runs
       run: |
